--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -7,14 +7,18 @@
   <body>
     <div id="hd">
       <h1>My 3 Favorite Websites</h1>
-    </div><br>
+    </div>
+    <br>
     <hr>
     <div id="intro"> A quick comparison of the aesthetics, functionality, and overall feel of my 3 favorite websties.
     </div>
     <div id="list">
-      <a href="http://www.coursera.com">Coursera</a><br>
-      <a href="http://www.fab.com">Fab</a><br>
-      <a href="http://www.goodfuckingdesignadvice.com">GFDA</a><br>
+      <a id="list" href="http://www.coursera.com">Coursera</a>
+      <br>
+      <a id="list" href="http://www.fab.com">Fab</a>
+      <br>
+      <a id="list" href="http://www.goodfuckingdesignadvice.com">GFDA</a>
+      <br>
     </div>
     <hr>
     <div id="content">
