updated blog template

--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <!--TAB NAME --> </title>
+    <title> <!--TAB NAME--> </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
   </head>
   <body>
-    <div id="hd">
-      <h1><!--TITLE OF POST--></h1>
-    </div><br>
-    <hr>
-    <div id="intro">
-      <!--table of contents or summary of post-->
-      <p><!--Test and shiz-->
-      </p>
+    <div id="top">
+    <img src="../imgs/dmdlt.jpg" align="center" />
     </div>
-    <hr>
+    <br>
+    <br>
+    <div id="navbar">
+      <span id="button">
+        <a href="http://findinit.wordpress.com/me/">about</a></span>
+        <span id="button">
+        <a href="mailto:dmarquezdlt@gmail.com">email</a></span>
+        <span id="button">
+        <a href="http://dmarquezdlt.github.io">projects</a></span>
+        <span id="button">
+        <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
+        <span id="button">
+        <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
+      </div>
+    </div>
     <div id="content">
-      <p><!--Text of blog post-->
+      <h3><!--blog post title--></h1>
+    <div id="intro"> <!--summary-->
+    </div>
+
+      <p>
+        <h4><!--section title--></h4>
+        <!--content text-->
       </p>
     </div>
   </body>
 </html>
+
+
 
