--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -5,11 +5,26 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
   </head>
   <body>
-    <div id="hd">
-      <h1>My 3 Favorite Websites</h1>
+    <div id="top">
+    <img src="../imgs/dmdlt.jpg" align="center" />
     </div>
     <br>
-    <hr>
+    <br>
+    <div id="navbar">
+      <span id="button">
+        <a href="http://findinit.wordpress.com/me/">about</a></span>
+        <span id="button">
+        <a href="mailto:dmarquezdlt@gmail.com">email</a></span>
+        <span id="button">
+        <a href="http://dmarquezdlt.github.io">projects</a></span>
+        <span id="button">
+        <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
+        <span id="button">
+        <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
+      </div>
+    </div>
+    <div id="content">
+      <h3>My 3 Favorite Websites</h1>
     <div id="intro"> A quick comparison of the aesthetics, functionality, and overall feel of my 3 favorite websties.
     </div>
     <div id="list">
@@ -18,10 +33,7 @@
       <a id="list" href="http://www.fab.com">Fab</a>
       <br>
       <a id="list" href="http://www.goodfuckingdesignadvice.com">GFDA</a>
-      <br>
     </div>
-    <hr>
-    <div id="content">
       <p>
         <h4>Coursera: Education for Everyone</h4>
         Coursera is a platform for online learning. I love it most for its purpose, but I also like its visually appeal, (reminds me of StartX), and ease of navigation.You are immediately drawn to the search function, so even before signing up, you can explore what kind of classes and institutions you can learn from. The second most striking thing are the classes right under it. So, if you don't know what you want to learn, it offers suggestions. The website is modern, organized, intuitive, minimalist (when it comes to text), and, well, pretty. There is lots of free content on the web, but this website gives free access to content from the best education institutions and it is extremely well organized. Once, you sign up, the functiality and organizeation gets even more impressive. The content is high-quality, education, easily-accessible, sharable, and mobile. The navigtion bar sits at the top and remains the there through your navigation through the site. You can always click on the logo to go back to the Home page. Browsing is easy. Of course you have to sign up and login to see all the content, but after you do there's the navigation bar and a dashboard to browse your classes/assignments, explore new courses. Added bonus: It's as easy to navigate this site on your phone/tablet through their app. Going through their site makes me feel inspired to learn more and excited that this content is available for free! I love "wasting" time on coursera, even if I don't actually take a course. It doesn't technically sell anything, (all content is free), but you can pay to get a certification after you finish the courses.
