--- a/blog-posts/c1-chefs-kitchen.html
+++ b/blog-posts/c1-chefs-kitchen.html
@@ -28,8 +28,11 @@
 
       <p>
         <h4><!--section title--></h4>
-        I'm expecting the worst going into DBC. To work long hours to not udnerstand many things, and even to not get along with everyone. But I also think it will be one of the best growth and learning experience I will ever have. I think I will like the complete immersion environment and the high expetations.
-        Shereef's video definitely addressed some of my concerns. After my intro session I called my best friend to tell her how worried I was that I would be able to do the program and hhow I thought there had been a mistake in accepting me because I know so little and was already having bumps in the road on week 1. It's good to know that I am not the only person that has felt like that going into this program. I am still very worried, but I'm also hopeful and excited to start the journey.
+        I'm expecting the worst going into DBC--to work long hours, to not underrstand many things, and even to not get along with everyone. 
+        But I also think it will be one of the best growth and learning experience I will ever have. 
+        I think I will like the complete immersion environment and the high expetations.
+        Shereef's video definitely addressed some of my concerns. After my intro session, I called my best friend to tell her how worried I was that I might not be able to do the program and that there had been a mistake in my acceptance because I know so little and was already having bumps in the road on week 1.
+        It's good to know that I am not the only person that has felt like that going into this program. I am still very worried, but I'm also hopeful and excited to start the journey.
       </p>
     </div>
   </body>
