--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
   </head>
   <body>
-    <div id="top">
+    <header>
     <img src="../imgs/dmdlt.jpg" align="center" />
-    </div>
-    <div id="navbar">
+    </header>
+    <nav>
       <span id="button">
         <a href="http://findinit.wordpress.com/me/">about</a></span>
         <span id="button">
@@ -19,12 +19,11 @@
         <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
         <span id="button">
         <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
-      </div>
-    </div>
-    <div id="content">
+    </nav>
+    <section>
       <h3>My 3 Favorite Websites</h1>
-    <div id="intro"> A quick comparison of the aesthetics, functionality, and overall feel of my 3 favorite websties.
-    </div>
+    <summary> A quick comparison of the aesthetics, functionality, and overall feel of my 3 favorite websties.
+    </summary>
     <div id="list">
       <a id="list" href="http://www.coursera.com">Coursera</a>
       <br>
@@ -43,8 +42,8 @@
       <p>
         <h4>GFDA: Good Fucking Design Advice</h4>
         My last website is a little different than the previous two. I just like this website because it gives good advice that looks pretty. I have their content as my desktop picture and screen saver because I love it so much.There's not much to this website: the first thing you see if their rotating advice pictures that are in 3 basic colors (black, white and orange) in huge Helvetica font. The rest of the page is white space, except for a navigation bar where you can buy prints or paraphanalia of their advice or pledge to follow the advice. It is elegant, beautiful, simple and in-you-face. The content is informational, educational, useful, applicable, and funny. It's easy to navigate because there's not much to do. After being on the site for a few minutes I feel pumped, inspired,and ready to get shit done.
-      </p
-    </div>
+      </p>
+    </section>
   </body>
 </html>
 
