--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title> <!--TAB NAME--> </title>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+  </head>
   <body>
-    Hello DBC!
+    <div id="top">
+    <img src="../imgs/dmdlt.jpg" align="center" />
+    </div>
+    <div id="navbar">
+      <span id="button">
+        <a href="http://findinit.wordpress.com/me/">about</a></span>
+        <span id="button">
+        <a href="mailto:dmarquezdlt@gmail.com">email</a></span>
+        <span id="button">
+        <a href="http://dmarquezdlt.github.io">projects</a></span>
+        <span id="button">
+        <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
+        <span id="button">
+        <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
+      </div>
+    </div>
+    <div id="content">
+      <h3><!--blog post title--></h1>
+    <div id="intro"> <!--summary-->
+    </div>
+
+      <p>
+        <h4><!--section title--></h4>
+        <!--content text-->
+      </p>
+    </div>
   </body>
 </html>
+
+
+
