--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <!--TAB NAME--> </title>
+    <title>DMDLT: Diana Marquez De La Torre</title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
   </head>
   <body>
