--- a/blog-posts/about-me.html
+++ b/blog-posts/about-me.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <About DMDLT> </title>
+    <title> About DMDLT </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
     <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   </head>
   <body>
-  <header>
+  <header class="dmdlt">
     <a href="http://dmarquezdlt.github.com/index.html"><img src="../imgs/dmdlt.jpg" align="center" /></a>
   </header>
   <section>
     <p> Hi! My name is Diana Marquez De La Torre, I am a California native and have been working in politics for the past 3 years. Now, I'm an aspiring programmer at Dev Bootcamp. </p>
     <p> Feel free to follow my progress and offer feedback through any of my social media channels. </p>
     <div class="img">
-      <img src="../imgs/BNW.jpg"/>
+      <img src="../imgs/BNW.jpg" style="height:auto; width:auto; max-width:300px; max-height:300px;" align="center"/>
     </div>
   </section>
   <footer>
