--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <!--TAB NAME--> </title>
+    <title> DMDLT: Diana </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
     <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   </head>
