updated header link

--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -4,10 +4,10 @@
     <title> <!--TAB NAME--> </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
   </head>
+    <header>
+    <a href="http://dmarquezdlt.github.com/index.html"><img src="../imgs/dmdlt.jpg" align="center" /></a>
+  </header>
   <body>
-    <div id="top">
-    <img src="../imgs/dmdlt.jpg" align="center" />
-    </div>
     <div id="navbar">
       <span id="button">
         <a href="http://findinit.wordpress.com/me/">about</a></span>
