--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
   </head>
   <body>
-    <header>
-    <img src="../imgs/dmdlt.jpg" align="center" />
-    </header>
+  <header>
+    <a href="http://dmarquezdlt.github.com/index.html"><img src="../imgs/dmdlt.jpg" align="center" /></a>
+  </header>
     <nav>
       <span id="button">
         <a href="http://findinit.wordpress.com/me/">about</a></span>
