--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DMDLT: Diana Marquez De La Torre</title>
+    <title> DMDLT: Diana </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="top">
+  <header>
     <img src="../imgs/dmdlt.jpg" align="center" />
-    </div>
-    <div id="navbar">
-      <span id="button">
-        <a href="http://findinit.wordpress.com/me/">about</a></span>
-        <span id="button">
-        <a href="mailto:dmarquezdlt@gmail.com">email</a></span>
-        <span id="button">
-        <a href="http://dmarquezdlt.github.io">projects</a></span>
-        <span id="button">
-        <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
-        <span id="button">
-        <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
-      </div>
-    </div>
-    <div id="content">
-      <h3><!--blog post title--></h1>
-    <div id="intro"> <!--summary-->
-    </div>
-
-      <p>
-        <h4><!--section title--></h4>
-        <!--content text-->
-      </p>
-    </div>
+  </header>
+  <table class="main">
+    <tr>
+      <td>
+          <a href="https://github.com/dmarquezdlt">Projects</a><td></td>
+        </td>
+      <td>
+          <a href="http://dmarquezdlt.github.com/blog-posts/blog-entries.html">Blog</a><td></td>
+        </td>
+      <td>
+          <a href="http://dmarquezdlt.github.com/blog-posts/about-me.html">About</a>
+      </td>
+    </tr>
+  </table>
+  <footer>
+    <nav>
+    <table class="button">
+      <tr>
+        <td>
+          <a href="mailto:dmarquezdlt@gmail.com">email</a></td><td></td>
+        <td>
+          <a href="https://github.com/dmarquezdlt">github</a></td><td></td>
+        <td>
+          <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></td><td></td>
+        <td>
+          <a href="http://www.twitter.com/dmarquezdlt">twitter</a></td><td></td>
+        <td>
+          <a href="http://www.instagram.com/dmarquezdlt">instagram</a></td>
+      </tr>
+    </table>
+    </nav>
+  </footer>
   </body>
 </html>
 
