update to personal paged

--- a/blog-posts/blog-entries.html
+++ b/blog-posts/blog-entries.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <About DMDLT> </title>
+    <title> DMDLT Blog Posts </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
     <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   </head>
