--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <!--TAB NAME--> </title>
+    <title> DMDLT Blog Template </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   </head>
-    <header>
+  <body>
+  <header>
     <a href="http://dmarquezdlt.github.com/index.html"><img src="../imgs/dmdlt.jpg" align="center" /></a>
   </header>
-  <body>
-    <div id="navbar">
-      <span id="button">
-        <a href="http://findinit.wordpress.com/me/">about</a></span>
-        <span id="button">
-        <a href="mailto:dmarquezdlt@gmail.com">email</a></span>
-        <span id="button">
-        <a href="http://dmarquezdlt.github.io">projects</a></span>
-        <span id="button">
-        <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
-        <span id="button">
-        <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
-      </div>
-    </div>
-    <div id="content">
-      <h3><!--blog post title--></h1>
-    <div id="intro"> <!--summary-->
-    </div>
+  <section>
 
-      <p>
-        <h4><!--section title--></h4>
-        <!--content text-->
-      </p>
-    </div>
+  </section>
+  <footer>
+    <nav>
+    <table class="button">
+      <tr>
+        <td>
+          <a href="mailto:dmarquezdlt@gmail.com">email</a></td><td></td>
+        <td>
+          <a href="https://github.com/dmarquezdlt">github</a></td><td></td>
+        <td>
+          <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></td><td></td>
+        <td>
+          <a href="http://www.twitter.com/dmarquezdlt">twitter</a></td><td></td>
+        <td>
+          <a href="http://www.instagram.com/dmarquezdlt">instagram</a></td>
+      </tr>
+    </table>
+    </nav>
+  </footer>
   </body>
 </html>
 
