--- a/blog-posts/c1-chefs-kitchen.html
+++ b/blog-posts/c1-chefs-kitchen.html
@@ -1,32 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CULTURAL ASSIGNEMENT 1</title>
+    <title>Cultural Assignment 1</title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   </head>
   <body>
   <header>
     <a href="http://dmarquezdlt.github.com/index.html"><img src="../imgs/dmdlt.jpg" align="center" /></a>
   </header>
-    <nav>
-      <span id="button">
-        <a href="http://findinit.wordpress.com/me/">about</a></span>
-        <span id="button">
-        <a href="mailto:dmarquezdlt@gmail.com">email</a></span>
-        <span id="button">
-        <a href="http://dmarquezdlt.github.io">projects</a></span>
-        <span id="button">
-        <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
-        <span id="button">
-        <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
-    </nav>
     <section>
       <h3>Hell's Kitchen</h1>
-    <summary> My reflections on the Fireside Chat with Shereef
-    </summary>
-
+      <summary> My reflections on the Fireside Chat with Shereef
+      </summary>
       <p>
-        <h4><!--section title--></h4>
         I'm expecting the worst going into DBC--to work long hours, to not underrstand many things, and even to not get along with everyone.
         But I also think it will be one of the best growth and learning experience I will ever have.
         I think I will like the complete immersion environment and the high expetations.
@@ -34,7 +21,25 @@
         It's good to know that I am not the only person that has felt like that going into this program. I am still very worried, but I'm also hopeful and excited to start the journey.
       </p>
     </section>
-  </body>
+    <footer>
+    <nav>
+      <table class="button">
+        <tr>
+         <td>
+            <a href="mailto:dmarquezdlt@gmail.com">email</a></td><td></td>
+          <td>
+            <a href="https://github.com/dmarquezdlt">github</a></td><td></td>
+          <td>
+            <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></td><td></td>
+          <td>
+            <a href="http://www.twitter.com/dmarquezdlt">twitter</a></td><td></td>
+          <td>
+            <a href="http://www.instagram.com/dmarquezdlt">instagram</a></td>
+        </tr>
+      </table>
+    </nav>
+    </footer>
+</body>
 </html>
 
 
