--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> COMPARING WEBSITES </title>
+    <title> Technical Assignment 1 </title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
   </head>
   <body>
   <header>
     <a href="http://dmarquezdlt.github.com/index.html"><img src="../imgs/dmdlt.jpg" align="center" /></a>
   </header>
-    <nav>
-      <span id="button">
-        <a href="http://findinit.wordpress.com/me/">about</a></span>
-        <span id="button">
-        <a href="mailto:dmarquezdlt@gmail.com">email</a></span>
-        <span id="button">
-        <a href="http://dmarquezdlt.github.io">projects</a></span>
-        <span id="button">
-        <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></span>
-        <span id="button">
-        <a href="http://www.twitter.com/dmarquezdlt">twitter</a></span>
-    </nav>
     <section>
       <h3>My 3 Favorite Websites</h1>
     <summary> A quick comparison of the aesthetics, functionality, and overall feel of my 3 favorite websties.
@@ -44,6 +33,26 @@
         My last website is a little different than the previous two. I just like this website because it gives good advice that looks pretty. I have their content as my desktop picture and screen saver because I love it so much.There's not much to this website: the first thing you see if their rotating advice pictures that are in 3 basic colors (black, white and orange) in huge Helvetica font. The rest of the page is white space, except for a navigation bar where you can buy prints or paraphanalia of their advice or pledge to follow the advice. It is elegant, beautiful, simple and in-you-face. The content is informational, educational, useful, applicable, and funny. It's easy to navigate because there's not much to do. After being on the site for a few minutes I feel pumped, inspired,and ready to get shit done.
       </p>
     </section>
+  <footer>
+    <nav>
+    <table class="button">
+      <tr>
+        <td>
+          <a href="mailto:dmarquezdlt@gmail.com">email</a></td><td></td>
+        <td>
+          <a href="https://github.com/dmarquezdlt">github</a></td><td></td>
+        <td>
+          <a href="http://www.linkedin.com/in/dianamarquezdlt/">linked in</a></td><td></td>
+        <td>
+          <a href="http://www.twitter.com/dmarquezdlt">twitter</a></td><td></td>
+        <td>
+          <a href="http://www.instagram.com/dmarquezdlt">instagram</a></td>
+      </tr>
+    </table>
+    </nav>
+  </footer>
   </body>
 </html>
+
+
 
