--- a/blog-posts/about-me.html
+++ b/blog-posts/about-me.html
@@ -10,8 +10,8 @@
     <a href="http://dmarquezdlt.github.com/index.html"><img src="../imgs/dmdlt.jpg" align="center" /></a>
   </header>
   <section>
-    <p> Hi! My name is Diana Marquez De La Torre, I am a California native and have been working in politics for the past 3 years. Now, I'm an aspiring programmer at Dev Bootcamp. </p>
-    <p> Feel free to follow my progress and offer feedback through any of my social media channels. </p>
+    <p> Hi! My name is Diana Marquez-De La Torre. I am a California native and have been working in politics for the past 3 years. Now, I'm an aspiring programmer at Dev Bootcamp. </p>
+    <p> Feel free to follow my progress and offer feedback through any of my social media channels. You can also check out my <a href="http://findinit.wordpress.com/"> personal blog </a>. </p>
     <div class="img">
       <img src="../imgs/BNW.jpg" style="height:auto; width:auto; max-width:300px; max-height:300px;" align="center"/>
     </div>
