added w2 blog post

--- a/blog-posts/blog-entries.html
+++ b/blog-posts/blog-entries.html
@@ -14,6 +14,7 @@
     <h3>Technical Posts</h3>
     <ol>
       <li><a href="http://dmarquezdlt.github.com/blog-posts/t1-compare-websites.html">Challenge 1: Comparing Websites</a></li>
+      <li><a href="http://dmarquezdlt.github.com/blog-posts/week2_technical.html">Challenge 2: MBP Tamal</a></li>
     </ol>
     <h3>Cultural Posts</h3>
     <ol>
