--- a/blog-posts/blog-entries.html
+++ b/blog-posts/blog-entries.html
@@ -15,6 +15,7 @@
     <ol>
       <li><a href="http://dmarquezdlt.github.com/blog-posts/t1-compare-websites.html">Challenge 1: Comparing Websites</a></li>
       <li><a href="http://dmarquezdlt.github.com/blog-posts/week2_technical.html">Challenge 2: MBP Tamal</a></li>
+      <li><a href="http://dmarquezdlt.github.com/blog-posts/week3_technical.html">Challenge 3: Javascript: The Good and The Bad</a></li>
     </ol>
     <h3>Cultural Posts</h3>
     <ol>
