updated blog posts

--- a/blog-posts/blog-entries.html
+++ b/blog-posts/blog-entries.html
@@ -16,10 +16,12 @@
       <li><a href="http://dmarquezdlt.github.com/blog-posts/t1-compare-websites.html">Challenge 1: Comparing Websites</a></li>
       <li><a href="http://dmarquezdlt.github.com/blog-posts/week2_technical.html">Challenge 2: MBP Tamal</a></li>
       <li><a href="http://dmarquezdlt.github.com/blog-posts/week3_technical.html">Challenge 3: Javascript: The Good and The Bad</a></li>
+      <li><a href="http://dmarquezdlt.github.com/blog-posts/week4_technical.html">Challenge 4: Hashes!</a></li>
     </ol>
     <h3>Cultural Posts</h3>
     <ol>
       <li><a href="http://dmarquezdlt.github.com/blog-posts/c1-chefs-kitchen.html">Challenge 1: Chef's Kitchen</a></li>
+      <li><a href="http://dmarquezdlt.github.com/blog-posts/week3_cultural.html">Challenge 1: How do you think?</a></li>
     </ol>
   </section>
   <footer>
