added link to other posts

--- a/blog-posts/about-me.html
+++ b/blog-posts/about-me.html
@@ -16,6 +16,7 @@
       <img src="../imgs/BNW.jpg" style="height:auto; width:auto; max-width:300px; max-height:300px;" align="center"/>
     </div>
   </section>
+  <summary><center><a href="blog-entries.html"> blog entries</center></summary>
   <footer>
     <nav>
     <table class="button">
