--- a/blog-posts/blog-entries.html
+++ b/blog-posts/blog-entries.html
@@ -20,10 +20,12 @@
     </ol>
     <h3>Cultural Posts</h3>
     <ol>
-      <li><a href="http://dmarquezdlt.github.com/blog-posts/c1-chefs-kitchen.html">Challenge 1: Chef's Kitchen</a></li>
-      <li><a href="http://dmarquezdlt.github.com/blog-posts/week3_cultural.html">Challenge 1: How do you think?</a></li>
+      <li><a href="http://dmarquezdlt.github.com/blog-posts/c1-chefs-kitchen.html">Week 1: Chef's Kitchen</a></li>
+      <li><a href="http://dmarquezdlt.github.com/blog-posts/week3_cultural.html">Week 3: How do you think?</a></li>
+      <li><a href="http://dmarquezdlt.github.com/blog-posts/week4_cultural.html">Week 4: Minorities in Tech</a></li>
     </ol>
   </section>
+
   <footer>
     <nav>
     <table class="button">
