--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -12,6 +12,7 @@
   <section>
 
   </section>
+  <summary><center><a href="blog-entries.html">other blog entries</center></summary>
   <footer>
     <nav>
     <table class="button">
