--- a/blog-posts/week3_cultural.html
+++ b/blog-posts/week3_cultural.html
@@ -21,6 +21,8 @@
     In terms of how this applies to my DBC experience, I think my style is useful because the way the curriculum is structured, I get to process any new information immediately in the challegenes. The learning material is given to us because the challenge we are about to take uses those skills, so it is a very linear process. DBC is also a losely structured environment, where each individual is responsible for driving their own process with the help of cohort-mates, instructores, and really the programming community at-large. This is the perfect thriving environment for my CS/AR style.<br>
     HOWEVER...this also means that when there are tasks that are not strictly linear, they are out of my comfort zone and I struggle with them. A perfect example is going from using ruby to javascript, then back to ruby again. The loop threw me for a loop. I also struggle with the first part of most solo challenges, where I have to think out what my code will be in words. First of all, it's a solo challenge, so I don't get to bounce ideas off people, which I prefer. Second of all, there is a certain amount of abstract thinking to creating solutions to the challenges. My initial code outline is usually very vague because only after I start working on something can I start coming up with more creative solutions.</p>
   </section>
+  <summary><center><a href="blog-entries.html">other blog entries</center></summary>
+
   <footer>
     <nav>
     <table class="button">
