--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -27,6 +27,8 @@
     </ul>
 
   </section>
+  <summary><center><a href="blog-entries.html">other blog entries</center></summary>
+
   <footer>
     <nav>
     <table class="button">
