--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -22,7 +22,7 @@
    </p>
 
   </section>
-
+  <summary><center><a href="blog-entries.html">other blog entries</center></summary>
   <footer>
     <nav>
     <table class="button">
