--- a/blog-posts/c1-chefs-kitchen.html
+++ b/blog-posts/c1-chefs-kitchen.html
@@ -21,6 +21,7 @@
         It's good to know that I am not the only person that has felt like that going into this program. I am still very worried, but I'm also hopeful and excited to start the journey.
       </p>
     </section>
+    <summary><center><a href="blog-entries.html">other blog entries</center></summary>
     <footer>
     <nav>
       <table class="button">
