--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -33,6 +33,7 @@
         My last website is a little different than the previous two. I just like this website because it gives good advice that looks pretty. I have their content as my desktop picture and screen saver because I love it so much.There's not much to this website: the first thing you see if their rotating advice pictures that are in 3 basic colors (black, white and orange) in huge Helvetica font. The rest of the page is white space, except for a navigation bar where you can buy prints or paraphanalia of their advice or pledge to follow the advice. It is elegant, beautiful, simple and in-you-face. The content is informational, educational, useful, applicable, and funny. It's easy to navigate because there's not much to do. After being on the site for a few minutes I feel pumped, inspired,and ready to get shit done.
       </p>
     </section>
+    <summary><center><a href="blog-entries.html">other blog entries</center></summary>
   <footer>
     <nav>
     <table class="button">
