--- a/blog-posts/week2_technical.html
+++ b/blog-posts/week2_technical.html
@@ -31,6 +31,7 @@
    </p>
 
   </section>
+  <summary><center><a href="blog-entries.html">other blog entries</center></summary>
 
   <footer>
     <nav>
