added blog index, as well as supporting files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
+
+<!DOCTYPE html>
 <html>
-  <body
-    Hello DBC!
+  <head>
+    <title> DMDLT: Coding in Progress</title>
+    <link rel="stylesheet" type="text/css" href="style-sheets/index.css">
+  </head>
+  <body>
+    <header>
+      <a href="index.html"><img src="imgs/dmdlt.jpg"/></a>
+    </header>
+    <div id="sub">a collection of my projects and thoughts as I wade through #devbootcamp</div>
+    <br>
+    <section>
+      <table id="main">
+        <tr>
+          <td><a href="blog/blog-index.html">blogs</a></td>
+          <td><a href="projects/project-index.html">projects</a></td>
+        </tr>
+      </table>
+    </section>
+    <footer>
+      <table class="bar">
+        <tr>
+          <td id="twitter"><a href="www.twitter.com/dmarquezdlt">twitter</a></td>
+          <td id="email"><a href="mailto:dmarquezdlt@gmail.com">email</a></td>
+          <td id="linkedin"><a href="www.linkedin.com/in/dianamarquezdlt">linkedin</a></td>
+          <td id="instagram"><a href="www.instagram.com/damrquezdlt">instagram</a></td>
+        </tr>
+      </table>
+    </footer>
+    <article>
+      <h3>about.me</h3>
+      <p>Hi! My name is Diana Marquez-De La Torre. I am a California native and have been working in politics for the past 3 years. Now, I'm an aspiring programmer at Dev Bootcamp, interest in entering the EduTech field and incorporating technology to help reform the California public education system. </p>
+    <p> Feel free to follow my progress and offer feedback through any of my social media channels posted above.</p>
+    </article>
+
   </body>
 </html>
