--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <footer>
       <table class="bar">
         <tr>
-          <td id="twitter"><a href="www.twitter.com/dmarquezdlt">twitter</a></td>
+          <td id="twitter"><a href="http://www.twitter.com/dmarquezdlt">twitter</a></td>
           <td id="email"><a href="mailto:dmarquezdlt@gmail.com">email</a></td>
-          <td id="linkedin"><a href="www.linkedin.com/in/dianamarquezdlt">linkedin</a></td>
-          <td id="instagram"><a href="www.instagram.com/damrquezdlt">instagram</a></td>
+          <td id="linkedin"><a href="http://www.linkedin.com/in/dianamarquezdlt">linkedin</a></td>
+          <td id="instagram"><a href="http://www.instagram.com/damrquezdlt">instagram</a></td>
         </tr>
       </table>
     </footer>
