--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <td id="twitter"><a href="http://www.twitter.com/dmarquezdlt">twitter</a></td>
           <td id="email"><a href="mailto:dmarquezdlt@gmail.com">email</a></td>
           <td id="linkedin"><a href="http://www.linkedin.com/in/dianamarquezdlt">linkedin</a></td>
-          <td id="instagram"><a href="http://www.instagram.com/damrquezdlt">instagram</a></td>
+          <td id="instagram"><a href="http://www.instagram.com/dmarquezdlt">instagram</a></td>
         </tr>
       </table>
     </footer>
