formatted blog posts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <a href="index.html"><img src="imgs/dmdlt.jpg"/></a>
     </header>
-    <div id="sub">a collection of my projects and thoughts as I wade through #devbootcamp</div>
+    <div id="sub">a collection of my thoughts and projects as I wade through #devbootcamp</div>
     <br>
     <section>
       <table id="main">
