--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </footer>
     <article>
       <h3>about.me</h3>
-      <p>Hi! My name is Diana Marquez-De La Torre. I am a California native and have been working in politics for the past 3 years. Now, I'm an aspiring programmer at Dev Bootcamp interested in entering the EduTech field and incorporating technology to help reform the California public education system. </p>
+      <p>Hi! My name is Diana Marquez-De La Torre. I am a California native and have been working in politics for the past 3 years. I am now an aspiring programmer at Dev Bootcamp interested in entering the EduTech field and incorporating technology into reforming the California public education system. </p>
     <p> Feel free to follow my progress and offer feedback through any of my social media channels posted above.</p>
     </article>
 
