--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
           <div class="ih-item circle effect2 left_to_right"><a href="#">
-            <div class="img"><img src="imgs/battleship.jpg" alt="img"></div>
+            <div class="img"><img src="imgs/Battleship.jpg" alt="img"></div>
             <div class="info">
               <h3>Battleship</h3>
               <p>learn more</p>
